# 1724Rust_project_decentrialized_password_manager

./: Cargo.toml  Proposal.html  Proposal.md  README.html  README.md  passwords.db  test_passwords.db
src/: cli.rs  database.rs  encryption.rs  main.rs  schema.rs
tests/: cli_tests.rs
