[package]
name = "finalproject"
version = "0.1.0"
edition = "2021"

[package.metadata]
test-threads = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.3.8", features = ["sqlite"] } # SQLite integration
clap = { version = "3.2.23", features = ["derive"] } # For CLI commands
sodiumoxide = "0.2.6" # For encryption
serde = { version = "1.0.136", features = ["derive"] } # Serialization and deserialization
serde_json = "1.0.82" # JSON handling
base64 = "0.13.0" # Base64 encoding and decoding